Fixed side white space

--- a/blog_style3.css
+++ b/blog_style3.css
@@ -306,6 +306,10 @@
         justify-content: center;
         align-items: center;
 
+        padding: 0;
+        padding-bottom: 0.2rem;
+        padding-top: 0.2rem;
+
         /* border:2px solid black; */
     
     }
